# phones

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: tasks.py  web.py  worker.py
app/api/: __init__.py
app/api/base/: __init__.py  ping.py
app/api/dependencies/: repositories.py  services.py
app/api/dtos/: error_wrapper.py  response_paging.py  response_sorter.py  response_wrapper.py
app/api/handlers/: auth_error_handler.py  business_error_handler.py  validation_error_handler.py
app/api/v1/: __init__.py  get_number_info.py
app/core/: logging.py
app/core/settings/: __init__.py  base.py  connections_settings.py
app/domain/entities/: paging.py  phone_detail.py  phone_number_for_info.py  phone_registry_record.py  region_timezone.py
app/domain/enums/: error_code.py  error_type.py
app/domain/exceptions/: base_exception.py  business_exception.py  db_exception.py  external_service_exception.py  model_check_exception.py  validation_exception.py
app/repositories/database/: base.py  mongo.py
app/repositories/phones_registry/: base.py  digital_gov_ru.py
app/repositories/region_info/: base.py  positionstack_repository.py
app/services/: get_phone_info.py  update_phone_registry.py
app/utils/: cache_key_builder.py  init_cache.py  init_db.py  parse_number.py  transliterate_text.py
