[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Дмитрий Шойтов <shoytov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.942"
pep8 = "^1.7.1"
pylint = "^2.13.5"
black = "^22.3.0"
autoflake = "^1.4"
pydantic = "^1.9.0"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
loguru = "^0.6.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
redis = "^4.3.1"
APScheduler = "^3.9.1"
motor = "^3.0.0"
fastapi-cache2 = "^0.1.8"
aioredis = "^2.0.1"
transliterate = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
